--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
         "react-scripts": "4.0.3",
+        "simple-react-lightbox": "^3.6.4",
         "web-vitals": "^1.1.0"
     },
     "scripts": {
